Update api definitions
